little spacing bug

--- a/frontend/src/styles/_utils.scss
+++ b/frontend/src/styles/_utils.scss
@@ -149,7 +149,6 @@
 }
 
 .inline-small-padding {
-  display: inline-block;
   padding: 0.1em 0.2em;
   border-radius: 0.2em;
 }
